--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 --- 
 title: "Forecasting Constituents of the Minimum Volatility Index"
 author: "John Gilheany"
-date: "`r Sys.Date()`"
+date: "November 6, 2017"
 site: bookdown::bookdown_site
 output: bookdown::pdf_book
 documentclass: book
